Fixed unaligned cards

--- a/modules/decimal/style.css
+++ b/modules/decimal/style.css
@@ -20,17 +20,22 @@
 
     & ul {
         display: flex;
-        flex-direction: row;
-        align-items: center;
+        flex-direction: column;
+        transition: width 0ms ease-in-out;
+ 
     }
 
     & ul + ul {
-        margin-top: 60px;
+        margin-top: 100px;
     }
 
-    &li {
-        max-width: 50%;
-        transition: min-width 200ms ease-in-out;
+    & li {
+        transition: width 0ms ease-in-out;
+        max-width: 65%;
+        width: 50%;
+    }
+    & picture {
+        aspect-ratio: 16/9;
     }
 
 
@@ -38,14 +43,10 @@
 
     @container (min-width: 600px) {
         & ul {
-            display: grid;
-            grid-template-columns: 1fr 1fr; 
-
+            flex-direction: row;
+            /* display: grid;
+            grid-template-columns: 1fr 1fr; */
         }
-
-        /* & picture:hover {
-            min-width: 40vw;
-        } */
     }
 
 }
